# backend/pkg/api/openapiv2/backend/pkg/api/proto/lab_api.swagger.json
@@ -17,6 +17,195 @@
   ],
   "paths": {},
   "definitions": {
+    "FrontendConfigBeaconChainTimingsModule": {
+      "type": "object",
+      "properties": {
+        "networks": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "timeWindows": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/FrontendConfigTimeWindow"
+          }
+        },
+        "pathPrefix": {
+          "type": "string"
+        },
+        "enabled": {
+          "type": "boolean"
+        }
+      },
+      "title": "BeaconChainTimingsModule represents the beacon chain timings module configuration"
+    },
+    "FrontendConfigBeaconModule": {
+      "type": "object",
+      "properties": {
+        "enabled": {
+          "type": "boolean"
+        },
+        "description": {
+          "type": "string"
+        },
+        "pathPrefix": {
+          "type": "string"
+        },
+        "networks": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/FrontendConfigBeaconNetworkConfig"
+          }
+        }
+      },
+      "title": "BeaconModule represents the beacon module configuration"
+    },
+    "FrontendConfigBeaconNetworkConfig": {
+      "type": "object",
+      "properties": {
+        "headLagSlots": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "backlogDays": {
+          "type": "integer",
+          "format": "int32"
+        }
+      },
+      "title": "BeaconNetworkConfig represents beacon network-specific configuration"
+    },
+    "FrontendConfigConfig": {
+      "type": "object",
+      "properties": {
+        "modules": {
+          "$ref": "#/definitions/FrontendConfigModules"
+        },
+        "ethereum": {
+          "$ref": "#/definitions/FrontendConfigEthereumConfig"
+        }
+      },
+      "title": "Config is the configuration for the lab"
+    },
+    "FrontendConfigConsensusConfig": {
+      "type": "object",
+      "properties": {
+        "electra": {
+          "$ref": "#/definitions/FrontendConfigForkDetails"
+        }
+      },
+      "title": "ConsensusConfig represents consensus layer fork configurations"
+    },
+    "FrontendConfigEthereumConfig": {
+      "type": "object",
+      "properties": {
+        "networks": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/FrontendConfigNetwork"
+          }
+        }
+      },
+      "title": "EthereumConfig represents Ethereum-specific configuration"
+    },
+    "FrontendConfigForkConfig": {
+      "type": "object",
+      "properties": {
+        "consensus": {
+          "$ref": "#/definitions/FrontendConfigConsensusConfig"
+        }
+      },
+      "title": "ForkConfig represents fork configurations"
+    },
+    "FrontendConfigForkDetails": {
+      "type": "object",
+      "properties": {
+        "epoch": {
+          "type": "string",
+          "format": "int64"
+        },
+        "minClientVersions": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
+        }
+      },
+      "title": "ForkDetails represents details about a specific fork"
+    },
+    "FrontendConfigModules": {
+      "type": "object",
+      "properties": {
+        "beaconChainTimings": {
+          "$ref": "#/definitions/FrontendConfigBeaconChainTimingsModule"
+        },
+        "xatuPublicContributors": {
+          "$ref": "#/definitions/FrontendConfigXatuPublicContributorsModule"
+        },
+        "beacon": {
+          "$ref": "#/definitions/FrontendConfigBeaconModule"
+        }
+      },
+      "title": "Modules is the configuration for the modules"
+    },
+    "FrontendConfigNetwork": {
+      "type": "object",
+      "properties": {
+        "genesisTime": {
+          "type": "string",
+          "format": "int64"
+        },
+        "forks": {
+          "$ref": "#/definitions/FrontendConfigForkConfig"
+        }
+      },
+      "title": "Network represents an Ethereum network configuration"
+    },
+    "FrontendConfigTimeWindow": {
+      "type": "object",
+      "properties": {
+        "file": {
+          "type": "string"
+        },
+        "step": {
+          "type": "string"
+        },
+        "label": {
+          "type": "string"
+        },
+        "range": {
+          "type": "string"
+        }
+      },
+      "title": "TimeWindow represents a time window configuration"
+    },
+    "FrontendConfigXatuPublicContributorsModule": {
+      "type": "object",
+      "properties": {
+        "networks": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "timeWindows": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/FrontendConfigTimeWindow"
+          }
+        },
+        "pathPrefix": {
+          "type": "string"
+        },
+        "enabled": {
+          "type": "boolean"
+        }
+      },
+      "title": "XatuPublicContributorsModule represents the Xatu public contributors module configuration"
+    },
     "beacon_slotsAttestationWindow": {
       "type": "object",
       "properties": {
@@ -532,6 +721,23 @@
         }
       },
       "title": "SlimTimings data is a slimmed down version of FullTimings that drops the metadata and geo location"
+    },
+    "labFrontendConfig": {
+      "type": "object",
+      "properties": {
+        "config": {
+          "$ref": "#/definitions/FrontendConfigConfig"
+        }
+      },
+      "description": "FrontendConfig is the frontend configuration for the lab. Data here is used to populate the frontend UI,\nand is exposed publically."
+    },
+    "labapiGetConfigResponse": {
+      "type": "object",
+      "properties": {
+        "config": {
+          "$ref": "#/definitions/labFrontendConfig"
+        }
+      }
     },
     "labapiGetRecentLocallyBuiltBlocksResponse": {
       "type": "object",
