# backend/pkg/server/proto/xatu_public_contributors/xatu_public_contributorsconnect/xatu_public_contributors.connect.go
@@ -1,0 +1,72 @@
+// Code generated by protoc-gen-connect-go. DO NOT EDIT.
+//
+// Source: backend/pkg/server/proto/xatu_public_contributors/xatu_public_contributors.proto
+
+package xatu_public_contributorsconnect
+
+import (
+	connect "connectrpc.com/connect"
+	http "net/http"
+	xatu_public_contributors "pkg/proto/xatu_public_contributors"
+)
+
+// This is a compile-time assertion to ensure that this generated file and the connect package are
+// compatible. If you get a compiler error that this constant is not defined, this code was
+// generated with a version of connect newer than the one compiled into your binary. You can fix the
+// problem by either regenerating this code with an older version of connect or updating the connect
+// version compiled into your binary.
+const _ = connect.IsAtLeastVersion1_13_0
+
+const (
+	// XatuPublicContributorsServiceName is the fully-qualified name of the
+	// XatuPublicContributorsService service.
+	XatuPublicContributorsServiceName = "xatu_public_contributors.XatuPublicContributorsService"
+)
+
+// These variables are the protoreflect.Descriptor objects for the RPCs defined in this package.
+var (
+	xatuPublicContributorsServiceServiceDescriptor = xatu_public_contributors.File_backend_pkg_server_proto_xatu_public_contributors_xatu_public_contributors_proto.Services().ByName("XatuPublicContributorsService")
+)
+
+// XatuPublicContributorsServiceClient is a client for the
+// xatu_public_contributors.XatuPublicContributorsService service.
+type XatuPublicContributorsServiceClient interface {
+}
+
+// NewXatuPublicContributorsServiceClient constructs a client for the
+// xatu_public_contributors.XatuPublicContributorsService service. By default, it uses the Connect
+// protocol with the binary Protobuf Codec, asks for gzipped responses, and sends uncompressed
+// requests. To use the gRPC or gRPC-Web protocols, supply the connect.WithGRPC() or
+// connect.WithGRPCWeb() options.
+//
+// The URL supplied here should be the base URL for the Connect or gRPC server (for example,
+// http://api.acme.com or https://acme.com/grpc).
+func NewXatuPublicContributorsServiceClient(httpClient connect.HTTPClient, baseURL string, opts ...connect.ClientOption) XatuPublicContributorsServiceClient {
+	return &xatuPublicContributorsServiceClient{}
+}
+
+// xatuPublicContributorsServiceClient implements XatuPublicContributorsServiceClient.
+type xatuPublicContributorsServiceClient struct {
+}
+
+// XatuPublicContributorsServiceHandler is an implementation of the
+// xatu_public_contributors.XatuPublicContributorsService service.
+type XatuPublicContributorsServiceHandler interface {
+}
+
+// NewXatuPublicContributorsServiceHandler builds an HTTP handler from the service implementation.
+// It returns the path on which to mount the handler and the handler itself.
+//
+// By default, handlers support the Connect, gRPC, and gRPC-Web protocols with the binary Protobuf
+// and JSON codecs. They also support gzip compression.
+func NewXatuPublicContributorsServiceHandler(svc XatuPublicContributorsServiceHandler, opts ...connect.HandlerOption) (string, http.Handler) {
+	return "/xatu_public_contributors.XatuPublicContributorsService/", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		switch r.URL.Path {
+		default:
+			http.NotFound(w, r)
+		}
+	})
+}
+
+// UnimplementedXatuPublicContributorsServiceHandler returns CodeUnimplemented from all methods.
+type UnimplementedXatuPublicContributorsServiceHandler struct{}
